php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #26128 mbstring prints out wrong information on phpinfo()
Submitted: 2003-11-04 22:38 UTC Modified: 2003-11-04 23:29 UTC
From: patrick at patricktsang dot net Assigned:
Status: Closed Package: mbstring related
PHP Version: 4.3.4 OS: RH9
Private report: No CVE-ID: None
 [2003-11-04 22:38 UTC] patrick at patricktsang dot net
Description:
------------
I have no problem to enable GB and BIG-5 support with mbstring in 4.3.3

The version 4.3.4 has changed something on mbstring and I don't know why phpinfo() reports me there is only Japanese supported.

I use: --enable-mbstring=all --enable-mbregex 

The compile just ended with a minor warning on tempname

Helps?
Patrick



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-11-04 23:20 UTC] moriyoshi@php.net
From 4.3.4 on all language supports are enabled in mbstring no matter how it has been configured, whereas phpinfo() prints out wrong information.

 [2003-11-04 23:29 UTC] moriyoshi@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 18:00:01 2026 UTC