Fixed bug #26128 (mbstring prints out wrong information on phpinfo())